--- a/neo_strategy_test1.ipynb
+++ b/neo_strategy_test1.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %load neo_quant_backbone.py\n",
     "# %load neo_quant_backbone.py\n",
     "# %load neo_quant_backbone.py\n",
     "# !open .\n",
@@ -20,7 +21,7 @@
     "from dateutil import parser\n",
     "from matplotlib import font_manager, rc\n",
     "from IPython.display import HTML\n",
-    "# pd.set_option('display.max_colwidth', -1)\n",
+    "pd.set_option('display.max_colwidth', -1)\n",
     "# rc('font', family='AppleGothic')\n",
     "# plt.rcParams['axes.unicode_minus'] = False\n",
     "# pd.options.display.max_rows = 60\n",
@@ -133,8 +134,10 @@
     "def get_kosdaq_list(company_df):\n",
     "    return company_df[company_df['구분']=='코스닥']\n",
     "\n",
-    "def get_price_over_list(company_df, price):\n",
-    "    return company_df[company_df['액면가(원)'] >= price]\n",
+    "def _get_price_over_list(company_code_list, price_df, min_price = 0):\n",
+    "    temp_df = pd.DataFrame({'price':price_df[company_code_list].iloc[-1]})\n",
+    "    temp_df = temp_df[temp_df['price'] > min_price]\n",
+    "    return temp_df.index\n",
     "\n",
     "# str 이나 list 를 전달한다.\n",
     "def _get_company_code_list(company_name_list, company_df):\n",
@@ -174,7 +177,47 @@
     "    name = company_list[0]['name']\n",
     "    _show_chart(code, company_df, price_df, year_duration, name) \n",
     "    \n",
+    "def _show_monthly_chart(company_code, company_df, price_df, year_duration=1):\n",
+    "    end_date = price_df.iloc[-1].name\n",
+    "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
     "\n",
+    "    start_year = start_date.strftime(\"%Y\")\n",
+    "    end_year= end_date.strftime(\"%Y\")\n",
+    "    \n",
+    "    first = True\n",
+    "    for year in range(int(start_year), int(end_year)+1):\n",
+    "        for month in range(1,13):\n",
+    "            year_month = \"%d-%02d\" % (year, month)\n",
+    "#             print(year_month)\n",
+    "            if year_month in price_df.index:\n",
+    "                temp_df = pd.DataFrame(price_df.loc[year_month].iloc[0]).T\n",
+    "                if first:\n",
+    "                    month_df = temp_df\n",
+    "                    first = False\n",
+    "                else:\n",
+    "                    month_df = pd.concat([month_df, temp_df])\n",
+    "\n",
+    "    strategy_df = pd.DataFrame({'price':month_df[company_code]})\n",
+    "    ma3 = strategy_df['price'].rolling(window=3).mean()\n",
+    "    strategy_df['ma3'] = ma3\n",
+    "\n",
+    "#     plt.figure(figsize=(10, 6))\n",
+    "    name = _get_company_name(company_code, company_df)\n",
+    "#     strategy_df['price'].plot(label=name)\n",
+    "\n",
+    "    plt.figure(figsize=(20, 12))\n",
+    "    \n",
+    "    plt.plot(strategy_df.index, strategy_df['price'], color='darkblue',linewidth=3.0)\n",
+    "    plt.plot(strategy_df.index, strategy_df['ma3'], color='red', label='ma3')\n",
+    "\n",
+    "    plt.title(name)\n",
+    "    plt.xlabel(\"duration\")\n",
+    "    plt.ylabel(\"price\")\n",
+    "    plt.legend(loc='upper right')\n",
+    "    plt.grid()\n",
+    "    plt.show() \n",
+    "\n",
+    "    \n",
     "def _show_multi_chart(company_code_list, price_df, company_df, year_duration=1):\n",
     "    end_date = price_df.iloc[-1].name\n",
     "    start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
@@ -626,7 +669,8 @@
     "        code_list.append(code)\n",
     "\n",
     "    strategy_price = price_df[code_list][start_date:end_date]\n",
-    "\n",
+    "    strategy_price = strategy_price.fillna(method='bfill')\n",
+    "    \n",
     "    pf_stock_num = {}\n",
     "    stock_amount = 0\n",
     "    stock_pf = 0\n",
@@ -655,7 +699,8 @@
     "        code_list.append(code)\n",
     "\n",
     "    strategy_price = price_df[code_list][start_date:end_date]\n",
-    "\n",
+    "    strategy_price = strategy_price.fillna(method='bfill')\n",
+    "    \n",
     "    pf_stock_num = {}\n",
     "    stock_amount = 0\n",
     "    stock_pf = 0\n",
@@ -700,7 +745,7 @@
     "\n",
     "# [코드 5.32] 리밸런싱 백테스트 함수화 (Ch5. 백테스트.ipynb)\n",
     "\n",
-    "def backtest_re(strategy, start_date, end_date, initial_money, price_df, fr_df, fs_df, num, value_type=None, value_list=None, date_range=None):\n",
+    "def backtest_re(strategy, start_date, end_date, initial_money, price_df, fr_df, fs_df, invest_df, num, value_type=None, value_list=None, date_range=None):\n",
     "    \n",
     "    start_year = int(start_date.split('-')[0])\n",
     "    end_year = int(end_date.split('-')[0])\n",
@@ -792,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,6 +893,9 @@
     "def show_chart(company_code, year_duration=1):\n",
     "    _show_chart(company_code, companies, prices, year_duration)\n",
     "\n",
+    "def show_monthly_chart(company_code, year_duration=1):\n",
+    "    _show_monthly_chart(company_code, companies, prices, year_duration)\n",
+    "    \n",
     "def show_detail_chart_by_name(company_name, year_duration=1):\n",
     "    _show_detail_chart_by_name(company_name, companies, prices, year_duration)\n",
     "    \n",
@@ -866,7 +914,8 @@
     "def show_company_info_by_name(firm_name):\n",
     "    return _show_company_info_by_name(firm_name, companies)\n",
     "    \n",
-    "    \n",
+    "def get_price_over_list(company_code_list, min_price = 0):\n",
+    "    return _get_price_over_list(company_code_list, prices, min_price)    \n",
     "    \n",
     "########################## Strategy API ################################\n",
     "    \n",
@@ -909,12 +958,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "companies, prices, fs_df, fr_df, iv_df = load_all_data()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_code = get_company_code('GS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'GS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_df = prices\n",
+    "year_duration = 2\n",
+    "end_date = price_df.iloc[-1].name\n",
+    "start_date = end_date - datetime.timedelta(days=year_duration * 365)\n",
+    "strategy_price = price_df[company_code][start_date:end_date]\n",
+    "strategy_df = pd.DataFrame({'price':strategy_price})\n",
+    "# plt.figure(figsize=(10, 6))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy_df\n",
+    "exp_12=strategy_df.ewm(span=20,adjust=False).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max = get_maximum_earning_rate(3, 5000, 100, 'kospi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(max)"
    ]
   }
  ],
