--- a/neo_quant.ipynb
+++ b/neo_quant.ipynb
@@ -4633,6 +4633,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_price = _add_market_price_info(total_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
