--- a/neo_quant.ipynb
+++ b/neo_quant.ipynb
@@ -4679,6 +4679,11 @@
     "    \n",
     "def update_prices(company_df, origin_price_df, count):\n",
     "    origin_prices = origin_price_df\n",
+    "    \n",
+    "    origin_prices = update_origin_price_df(origin_prices, 'KOSPI', count)\n",
+    "    time.sleep(1)\n",
+    "    origin_prices = update_origin_price_df(origin_prices, 'KOSDAQ', count)\n",
+    "    \n",
     "    for num, code in enumerate(company_df.index):\n",
     "        try:\n",
     "            print(num, code)\n",
