--- a/neo_strategy_test2.ipynb
+++ b/neo_strategy_test2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
     "#     temp_df = temp_df[temp_df['price'] > min_price]\n",
     "#     return temp_df.index\n",
     "\n",
-    "def _get_price_over_list(company_code_list, price_df, min_price = 0, check_month=None):\n",
+    "def _get_price_over_code_list(company_code_list, price_df, min_price = 0, check_month=None):\n",
     "    if check_month == None:\n",
     "        temp_df = pd.DataFrame({'price':price_df[company_code_list].iloc[-1]})\n",
     "    else:\n",
@@ -194,7 +194,7 @@
     "        strategy_df['price'].plot(label=name)\n",
     "        \n",
     "        if show_market_price == True:\n",
-    "            if isKospi(company_code):\n",
+    "            if is_kospi(company_code):\n",
     "                market_name = 'KOSPI'\n",
     "            else:\n",
     "                market_name = 'KOSDAQ'\n",
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,8 +1108,13 @@
     "    lst3 = [value for value in lst1 if value in lst2] \n",
     "    return lst3 \n",
     "\n",
-    "def isKospi(company_code):\n",
-    "    return companies.loc[company_code]['구분'] == '코스피'\n",
+    "def is_kospi(company_code):\n",
+    "    if company_code in companies.index:\n",
+    "        return companies.loc[company_code]['구분'] == '코스피'\n",
+    "    elif company_code == 'KOSPI':\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "def get_company_name(company_code):    \n",
     "    return _get_company_name(company_code, companies)\n",
@@ -1198,13 +1203,18 @@
     "def get_kosdaq_list(company_df):\n",
     "    return company_df[company_df['구분']=='코스닥']\n",
     "    \n",
-    "def get_price_over_list(company_code_list, min_price = 0, check_month=None):\n",
-    "    return _get_price_over_list(company_code_list, prices, min_price, check_month)    \n",
-    "    \n",
-    "########################## Strategy API ################################\n",
-    "    \n",
+    "def get_price_over_code_list(company_code_list, min_price = 0, check_month=None):\n",
+    "    return _get_price_over_code_list(company_code_list, prices, min_price, check_month)    \n",
+    "\n",
+    "def get_price_over_list(company_df, min_price = 0, check_month=None):\n",
+    "    return company_df[company_df['price'] > min_price]\n",
+    "\n",
     "def low_per(index_date, num=None):\n",
     "    return _low_per(iv_df, index_date, num)\n",
+    "\n",
+    "\n",
+    "########################## Strategy API ################################\n",
+    "    \n",
     "    \n",
     "def show_business_trend(year_duration=1):\n",
     "    _show_business_trend(companies, prices, year_duration)\n",
@@ -1276,7 +1286,35 @@
     "    return total_df\n",
     "        \n",
     "\n",
+    "def get_company_list_beated_market_profit(price_df, start_date, end_date=None, market_type='kospi', min_profit=None, min_price=0):\n",
+    "    if end_date == None:\n",
+    "        end_date = price_df.iloc[-1].name\n",
+    "    strategy_price = price_df[start_date:end_date]\n",
+    "    strategy_price = strategy_price.fillna(method='bfill')\n",
+    "    total_change_rate = strategy_price/strategy_price.iloc[0]-1\n",
+    "    st_df = pd.DataFrame({'change_rate':total_change_rate.iloc[-1]})\n",
+    "    st_df['구분'] = st_df.index.map(lambda x: '코스피' if is_kospi(x) else '코스닥')\n",
+    "    if market_type == 'kospi':\n",
+    "        st_df = get_kospi_list(st_df)\n",
+    "        st_df = st_df[st_df['change_rate'] > st_df.loc['KOSPI']['change_rate']]\n",
+    "    else:\n",
+    "        st_df = get_kosdaq_list(st_df)\n",
+    "        st_df = st_df[st_df['change_rate'] > st_df.loc['KOSDAQ']['change_rate']]\n",
+    "        \n",
+    "    st_df = st_df.drop('구분', axis=1)\n",
+    "    st_df = add_company_info(st_df)\n",
+    "    st_df = add_price_info(st_df)\n",
+    "    \n",
+    "    st_df = get_price_over_list(st_df, min_price)\n",
     "\n",
+    "    if min_profit != None:\n",
+    "        st_df = st_df[st_df['change_rate'] > min_profit]\n",
+    "\n",
+    "    st_df['rank'] = st_df['change_rate'].rank(ascending=False)\n",
+    "    st_df = st_df.sort_values(by='rank')\n",
+    "    \n",
+    "\n",
+    "    return st_df\n",
     "\n",
     "\n",
     "\n",
@@ -1302,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,6 +1363,15 @@
    "outputs": [],
    "source": [
     "company_code = get_company_code(company_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df = st_get_company_list_beated_market_profit(prices, '2016/7', None, 'kospi', 1.0, 5000)"
    ]
   }
  ],
