--- a/neo_strategy_1.ipynb
+++ b/neo_strategy_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df =get_company_list_beated_market_profit(prices, '2016/7', None, 'kospi', 1.0, 5000)"
+    "temp_df = get_company_list_beated_market_profit(prices, '2016/7', None, 'kospi', 1.0, 5000)"
    ]
   }
  ],
