--- a/neo_quant.ipynb
+++ b/neo_quant.ipynb
@@ -500,6 +500,7 @@
     "            except requests.exceptions.Timeout:\n",
     "                time.sleep(60)\n",
     "                price_df = make_price_dataframe(code, timeframe, count)\n",
+    "            price_df[price_df.columns[0]] = price_df[price_df.columns[0]].astype(float)    \n",
     "            if num == 0 :\n",
     "                total_price = price_df\n",
     "            else:\n",
@@ -1683,23 +1684,6 @@
     "# [코드 3.32] 투자지표 데이터 엑셀로 저장 (CH3. 데이터 수집하기.ipynb)\n",
     "\n",
     "total_invest_year.to_excel(r'data/invest_data.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 가격정보 가져오기용 회사정보 가져오기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "companies = get_company_info()\n",
-    "companies['종목코드'] = companies['종목코드'].apply(make_code2)"
    ]
   },
   {
