--- a/neo_strategy_1.ipynb
+++ b/neo_strategy_1.ipynb
@@ -1432,7 +1432,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df = get_company_list_beated_market_profit(prices, '2016/7', None, 'kospi', 1.0, 5000)"
+    "beat = get_company_list_beated_market_profit(prices, '2016/7', None, 'kospi', 1.0, 5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beat.sort_values(by='업종')\n",
+    "beat.groupby('업종').count()\n",
+    "beat.loc[beat['업종'] == '특수 목적용 기계 제조업']"
    ]
   }
  ],
