--- a/neo_strategy_test3.ipynb
+++ b/neo_strategy_test3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,6 +1370,22 @@
    "source": [
     "companies, fs_df, fr_df, iv_df, prices = load_all_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my = backtest_with_code_list(my_portfolio_code_list, '2015/1', '2019/6')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
