--- a/neo_strategy_1.ipynb
+++ b/neo_strategy_1.ipynb
@@ -1540,6 +1540,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_start_end_chart(my_portfolio_code_list, '2016-1-1', None, True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
