--- a/neo_strategy_1.ipynb
+++ b/neo_strategy_1.ipynb
@@ -1541,9 +1541,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'show_start_end_chart' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f784ec4dfe9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshow_start_end_chart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_portfolio_code_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'2016-1-1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'show_start_end_chart' is not defined"
+     ]
+    }
+   ],
    "source": [
     "show_start_end_chart(my_portfolio_code_list, '2016-1-1', None, True)"
    ]
