--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!open ."
+    "# !open ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load neo_quant_backtest.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "companies, fs_df, fr_df, iv_df, prices = load_all_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_rows = 6000\n",
+    "pd.set_option('display.max_columns', 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_low_per_kospi_firm_list(start_date):\n",
+    "    start_date = str(start_date)\n",
+    "    strategy_date = get_strategy_date(start_date)\n",
+    "    per = low_per(strategy_date)\n",
+    "    new_firm_list = get_code_list_has_price(per.index, price_df, start_date)\n",
+    "    per = per.loc[new_firm_list]\n",
+    "    per = add_price_info(per)\n",
+    "    per = add_company_info(per)\n",
+    "    per = get_kospi_list(per)\n",
+    "\n",
+    "    temp_df = pd.DataFrame({'price':price_df.loc[start_date][per.index]})\n",
+    "    temp_index = temp_df[temp_df['price'] > 5000].index\n",
+    "    per = per.loc[temp_index]\n",
+    "\n",
+    "    return per.index\n",
+    "\n",
+    "def get_low_per_firm_list(start_date, price_df, num):\n",
+    "    start_date = str(start_date)\n",
+    "    strategy_date = get_strategy_date(start_date)\n",
+    "    firm_list = low_per(strategy_date).index\n",
+    "    return get_code_list_has_price(firm_list, price_df, start_date)[:num]\n",
+    "\n",
+    "def get_low_per_porfolio(start_date):\n",
+    "    firm_list = get_low_per_firm_list(start_date, price_df, None)\n",
+    "    return firm_list\n",
+    "\n",
+    "def get_high_roa_firm_list(start_date, price_df, num):\n",
+    "    start_date = str(start_date)\n",
+    "    strategy_date = get_strategy_date(start_date)\n",
+    "    firm_list = high_roa(fr_df, strategy_date, None).index\n",
+    "    return get_code_list_has_price(firm_list, price_df, start_date)[:num]\n",
+    "\n",
+    "def get_high_roa_porfolio(start_date):\n",
+    "    firm_list = get_high_roa_firm_list(start_date, price_df, None)\n",
+    "    return firm_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_df = prices\n",
+    "start_date = '2016-6'\n",
+    "initial_money = 100000000\n",
+    "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365*2\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_per_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365/2\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_per_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365*2\n",
+    "total_pf_df = get_portfolio_backtest_df(get_high_roa_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365/2\n",
+    "total_pf_df = get_portfolio_backtest_df(get_high_roa_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt4 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_per_kospi_firm_list, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt5 = get_backtest_result_from_pf(total_pf_df, price_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rc('font', size=10)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.plot(bt1.index, bt1['total_portfolio'], label='low per : 2 years')\n",
+    "plt.plot(bt2.index, bt2['total_portfolio'], label='low per : 6 month')\n",
+    "plt.plot(bt3.index, bt3['total_portfolio'], label='high roa : 2 years')\n",
+    "plt.plot(bt4.index, bt4['total_portfolio'], label='high roa : 6 month')\n",
+    "plt.plot(bt5.index, bt4['total_portfolio'], label='low per kospi')\n",
+    "plt.title('backtest')\n",
+    "plt.xlabel(\"duration\")\n",
+    "plt.ylabel(\"profit\")\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   }
  ],
