--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -138,13 +138,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "kospi_df = price_df[['KOSPI']][start_date:]\n",
+    "kospi_df = kospi_df.fillna(method='bfill')\n",
+    "kospi_df['total_change_rate'] = kospi_df/kospi_df.iloc[0]-1\n",
+    "\n",
+    "kosdaq_df = price_df[['KOSDAQ']][start_date:]\n",
+    "kosdaq_df = kosdaq_df.fillna(method='bfill')\n",
+    "kosdaq_df['total_change_rate'] = kosdaq_df/kosdaq_df.iloc[0]-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.rc('font', size=10)\n",
     "plt.figure(figsize=(20, 12))\n",
-    "plt.plot(bt1.index, bt1['total_portfolio'], label='low per : 2 years')\n",
-    "plt.plot(bt2.index, bt2['total_portfolio'], label='low per : 6 month')\n",
-    "plt.plot(bt3.index, bt3['total_portfolio'], label='high roa : 2 years')\n",
-    "plt.plot(bt4.index, bt4['total_portfolio'], label='high roa : 6 month')\n",
-    "plt.plot(bt5.index, bt4['total_portfolio'], label='low per kospi')\n",
+    "plt.plot(bt1.index, bt1['total_change_rate'], label='low per : 2 years')\n",
+    "plt.plot(bt2.index, bt2['total_change_rate'], label='low per : 6 month')\n",
+    "plt.plot(bt3.index, bt3['total_change_rate'], label='high roa : 2 years')\n",
+    "plt.plot(bt4.index, bt4['total_change_rate'], label='high roa : 6 month')\n",
+    "plt.plot(bt5.index, bt4['total_change_rate'], label='low per kospi')\n",
+    "plt.plot(kospi_df.index, kospi_df['total_change_rate'], label='kospi', color='red',linewidth=2.0, linestyle='dashed')\n",
+    "plt.plot(kosdaq_df.index, kosdaq_df['total_change_rate'], label='kosdaq', color='blue',linewidth=2.0, linestyle='dashed')\n",
     "plt.title('backtest')\n",
     "plt.xlabel(\"duration\")\n",
     "plt.ylabel(\"profit\")\n",
