--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -118,11 +118,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kospi_df = price_df[['KOSPI']][start_date:]\n",
+    "kospi_df = prices[['KOSPI']][start_date:]\n",
     "kospi_df = kospi_df.fillna(method='bfill')\n",
     "kospi_df['total_change_rate'] = kospi_df/kospi_df.iloc[0]-1\n",
     "\n",
-    "kosdaq_df = price_df[['KOSDAQ']][start_date:]\n",
+    "kosdaq_df = prices[['KOSDAQ']][start_date:]\n",
     "kosdaq_df = kosdaq_df.fillna(method='bfill')\n",
     "kosdaq_df['total_change_rate'] = kosdaq_df/kosdaq_df.iloc[0]-1"
    ]
