--- a/neo_strategy_test9.ipynb
+++ b/neo_strategy_test9.ipynb
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2480,126 @@
       "삼보판지(A023600) : 3524\n",
       "\n",
       "\n",
-      ">>>>>> enough profit (삼호 : A001880) - (21800 : 0.52) : 2019-06-03 00:00:00\n"
+      ">>>>>> enough profit (삼호 : A001880) - (21800 : 0.52) : 2019-06-03 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-06-03 00:00:00\n",
+      "['A001880']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-06-03 00:00:00\n",
+      "바른손이앤에이(A035620) : 1971\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (신세계건설 : A034300) - (31600 : 0.21) : 184 days 00:00:002019-06-07 00:00:00\n",
+      ">>>>>> enough periods (쌍방울 : A102280) - (1020 : -0.02) : 184 days 00:00:002019-06-07 00:00:00\n",
+      ">>>>>> enough periods (금호산업 : A002990) - (14250 : 0.18) : 184 days 00:00:002019-06-07 00:00:00\n",
+      ">>>>>> enough periods (현대미포조선 : A010620) - (49750 : -0.12) : 184 days 00:00:002019-06-07 00:00:00\n",
+      ">>>>>> enough periods (무림페이퍼 : A009200) - (3135 : 0.05) : 184 days 00:00:002019-06-07 00:00:00\n",
+      ">>>>>> enough periods (미래에셋생명 : A085620) - (4655.0 : 0.08) : 184 days 00:00:002019-06-07 00:00:00\n",
+      ">>>>>> enough periods (대한항공 : A003490) - (32500 : 0.03) : 184 days 00:00:002019-06-07 00:00:00\n",
+      ">>>>>> sell list (7) : 2019-06-07 00:00:00\n",
+      "['A034300', 'A102280', 'A002990', 'A010620', 'A009200', 'A085620', 'A003490']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (7) : 2019-06-07 00:00:00\n",
+      "대양제지(A006580) : 954\n",
+      "케이피엠테크(A042040) : 3919\n",
+      "크리스탈신소재(A900250) : 1988\n",
+      "SK하이닉스(A000660) : 62\n",
+      "한양이엔지(A045100) : 304\n",
+      "동원개발(A013120) : 857\n",
+      "신대양제지(A016590) : 50\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (크라운해태홀딩스 : A005740) - (11150 : -0.07) : 185 days 00:00:002019-06-17 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-06-17 00:00:00\n",
+      "['A005740']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-06-17 00:00:00\n",
+      "신세계건설(A034300) : 205\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (한일홀딩스 : A003300) - (51700 : -0.08) : 183 days 00:00:002019-07-24 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-07-24 00:00:00\n",
+      "['A003300']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-07-24 00:00:00\n",
+      "비덴트(A121800) : 550\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (세아제강지주 : A003030) - (49100 : -0.06) : 185 days 00:00:002019-08-05 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-08-05 00:00:00\n",
+      "['A003030']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-08-05 00:00:00\n",
+      "한일홀딩스(A003300) : 119\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (케이씨 : A029460) - (12300 : -0.1) : 183 days 00:00:002019-08-13 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-08-13 00:00:00\n",
+      "['A029460']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-08-13 00:00:00\n",
+      "세아제강지주(A003030) : 229\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (HDC : A012630) - (12350 : -0.4) : 183 days 00:00:002019-09-04 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-09-04 00:00:00\n",
+      "['A012630']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-09-04 00:00:00\n",
+      "케이씨(A029460) : 499\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (효성 : A004800) - (82000 : 0.09) : 184 days 00:00:002019-10-10 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-10-10 00:00:00\n",
+      "['A004800']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-10-10 00:00:00\n",
+      "HDC(A012630) : 827\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (한신공영 : A004960) - (15600 : -0.16) : 183 days 00:00:002019-10-15 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-10-15 00:00:00\n",
+      "['A004960']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-10-15 00:00:00\n",
+      "효성(A004800) : 64\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (SIMPAC : A009160) - (3255 : 0.19) : 183 days 00:00:002019-10-22 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-10-22 00:00:00\n",
+      "['A009160']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-10-22 00:00:00\n",
+      "한신공영(A004960) : 381\n",
+      "\n",
+      "\n",
+      ">>>>>> enough periods (대덕전자 : A008060) - (11250 : 0.15) : 183 days 00:00:002019-10-25 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-10-25 00:00:00\n",
+      "['A008060']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-10-25 00:00:00\n",
+      "SIMPAC(A009160) : 2142\n",
+      "\n",
+      "\n",
+      ">>>>>> enough profit (비덴트 : A121800) - (10750 : 0.56) : 2019-10-30 00:00:00\n",
+      ">>>>>> sell list (1) : 2019-10-30 00:00:00\n",
+      "['A121800']\n",
+      "\n",
+      "\n",
+      ">>>>>> buy list (1) : 2019-10-30 00:00:00\n",
+      "대덕전자(A008060) : 560\n",
+      "\n",
+      "\n"
      ]
     }
    ],
