--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load neo_quant_backbone.py"
+    "%load py_neo_quant_backbone.py"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load neo_quant.py"
+    "%load py_neo_quant_basic.py"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load neo_quant_backtest.py"
+    "%load py_neo_quant_backtest.py"
    ]
   },
   {
@@ -123,7 +123,7 @@
     "initial_money = 100000000\n",
     "\n",
     "max_profit = 0.5\n",
-    "max_holding_days=365*2\n",
+    "max_holding_days=365/2\n",
     "total_pf_df = get_portfolio_backtest_df(get_low_per_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
@@ -169,7 +169,7 @@
    "source": [
     "plt.rc('font', size=10)\n",
     "plt.figure(figsize=(20, 12))\n",
-    "plt.plot(bt1.index, bt1['total_change_rate'], label='low per : 2 years')\n",
+    "plt.plot(bt1.index, bt1['total_change_rate'], label='bt1')\n",
     "# plt.plot(bt2.index, bt2['total_change_rate'], label='low per : 6 month')\n",
     "# plt.plot(bt3.index, bt3['total_change_rate'], label='high roa : 2 years')\n",
     "# plt.plot(bt4.index, bt4['total_change_rate'], label='high roa : 6 month')\n",
