--- a/neo_test2.ipynb
+++ b/neo_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load py_neo_quant_backbone.py\n",
-    "# %load neo_quant_backbone.py\n",
     "# !open .\n",
-    "# %load neo_quant_backbone.py\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
@@ -89,7 +87,7 @@
     "    kosdaq = pd.read_excel('data/kosdaq.xls')\n",
     "    kospi['구분'] = '코스피'\n",
     "    kosdaq['구분'] = '코스닥'\n",
-    "    companies = pd.concat([kospi, kosdaq])\n",
+    "    companies = pd.concat([kospi, kosdaq], sort=False)\n",
     "    companies = companies[['종목코드','기업명','구분','업종코드','업종','액면가(원)','상장주식수(주)', '자본금(원)']]\n",
     "    companies['상장주식수(주)'] = companies['상장주식수(주)'].str.replace(',','').astype(int)\n",
     "    companies['자본금(원)'] = companies['자본금(원)'].str.replace(',','').astype(int)\n",
@@ -263,7 +261,7 @@
     "                    month_df = temp_df\n",
     "                    first = False\n",
     "                else:\n",
-    "                    month_df = pd.concat([month_df, temp_df])\n",
+    "                    month_df = pd.concat([month_df, temp_df], sort=False)\n",
     "\n",
     "    strategy_df = pd.DataFrame({'price':month_df[company_code]})\n",
     "    ma3 = strategy_df['price'].rolling(window=3).mean()\n",
@@ -519,7 +517,7 @@
     "    price_df.index = pd.to_datetime(price_df.index)\n",
     "    price_df[code] = price_df[code].astype(float)\n",
     "    price_df_origin = pd.DataFrame({code:origin_prices[code]}) \n",
-    "    new_price_df = pd.concat([price_df_origin, price_df])\n",
+    "    new_price_df = pd.concat([price_df_origin, price_df], sort=False)\n",
     "    new_price_df = new_price_df.loc[~new_price_df.index.duplicated(keep='last')]\n",
     "    origin_prices = origin_prices.drop(code, axis=1)\n",
     "    origin_prices = pd.merge(origin_prices, new_price_df, left_index=True, right_index=True, how='outer')\n",
@@ -562,7 +560,7 @@
     "    temp_df3 = temp_df3.set_index(temp_df3.columns[0])\n",
     "    temp_df3 = temp_df3.loc[['영업활동으로인한현금흐름']]\n",
     "\n",
-    "    fs_df = pd.concat([temp_df, temp_df2, temp_df3])\n",
+    "    fs_df = pd.concat([temp_df, temp_df2, temp_df3], sort=False)\n",
     "    \n",
     "    return fs_df\n",
     "\n",
@@ -911,7 +909,7 @@
     "        if temp == start_year:\n",
     "            total_df = backtest\n",
     "        else:\n",
-    "            total_df = pd.concat([total_df[:-1], backtest])\n",
+    "            total_df = pd.concat([total_df[:-1], backtest], sort=False)\n",
     "\n",
     "    total_df ['일변화율'] = total_df ['종합포트폴리오'].pct_change()\n",
     "    total_df ['총변화율'] = total_df ['종합포트폴리오']/ total_df ['종합포트폴리오'][0] - 1\n",
@@ -1030,7 +1028,7 @@
     "                    month_df = temp_df\n",
     "                    first = False\n",
     "                else:\n",
-    "                    month_df = pd.concat([month_df, temp_df])\n",
+    "                    month_df = pd.concat([month_df, temp_df], sort=False)\n",
     "    return month_df\n",
     "\n",
     "def get_yearly_price_df(company_code, price_df, year_duration=1):\n",
@@ -1107,12 +1105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load py_neo_quant_basic.py\n",
-    "# %load neo_quant.py\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "# import requests\n",
@@ -1326,7 +1323,7 @@
     "        if temp == start_year:\n",
     "            total_df = backtest\n",
     "        else:\n",
-    "            total_df = pd.concat([total_df, backtest])\n",
+    "            total_df = pd.concat([total_df, backtest], sort=False)\n",
     "\n",
     "    total_df ['day_change_rate'] = total_df ['total_portfolio'].pct_change()\n",
     "    total_df ['total_change_rate'] = total_df ['total_portfolio']/ total_df ['total_portfolio'][0] - 1\n",
@@ -1429,13 +1426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load py_neo_quant_backtest.py\n",
-    "# %load neo_quant_backtest.py\n",
-    "# %load neo_quant_backtest.py\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "# import requests\n",
@@ -1514,7 +1509,7 @@
     "            backtest_df = temp_df\n",
     "            initial_money = pf_profit\n",
     "        else:\n",
-    "            backtest_df = pd.concat([backtest_df, temp_df])\n",
+    "            backtest_df = pd.concat([backtest_df, temp_df], sort=False)\n",
     "    backtest_df['day_change_rate'] = backtest_df['total_portfolio'].pct_change()\n",
     "    backtest_df['total_change_rate'] = backtest_df['total_portfolio']/initial_money - 1\n",
     "    return backtest_df\n",
@@ -1583,7 +1578,7 @@
     "def update_portfolio(pf_func, total_pf_df, cache_df, today, price_df, firm_count=20, max_profit=0.5, max_holding_days=365*2):\n",
     "    temp_df = pd.DataFrame(total_pf_df.iloc[-1]).T\n",
     "    temp_df.index = [today]\n",
-    "    total_pf_df = pd.concat([total_pf_df, temp_df])\n",
+    "    total_pf_df = pd.concat([total_pf_df, temp_df], sort=False)\n",
     "    \n",
     "    total_cash = total_pf_df['cash'].iloc[-1]\n",
     "#     prev_date = total_pf_df.index[-1]\n",
@@ -1698,65 +1693,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Shared/anaconda3/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:75: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "companies, fs_df, fr_df, iv_df, prices = load_all_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Shared/anaconda3/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: FutureWarning: \n",
-      "Passing list-likes to .loc or [] with any missing label will raise\n",
-      "KeyError in the future, you can use .reindex() as an alternative.\n",
-      "\n",
-      "See the documentation here:\n",
-      "https://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n",
-      "  \n",
-      "/Users/Shared/anaconda3/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: \n",
-      "Passing list-likes to .loc or [] with any missing label will raise\n",
-      "KeyError in the future, you can use .reindex() as an alternative.\n",
-      "\n",
-      "See the documentation here:\n",
-      "https://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-      "/Users/Shared/anaconda3/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: FutureWarning: \n",
-      "Passing list-likes to .loc or [] with any missing label will raise\n",
-      "KeyError in the future, you can use .reindex() as an alternative.\n",
-      "\n",
-      "See the documentation here:\n",
-      "https://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n",
-      "  after removing the cwd from sys.path.\n"
-     ]
-    }
-   ],
-   "source": [
-    "companies = get_company_df_from_total_capital(companies, 0.6)\n",
-    "fs_df = fs_df.loc[companies.index]\n",
-    "fr_df = fr_df.loc[companies.index]\n",
-    "iv_df = iv_df.loc[companies.index]"
    ]
   },
   {
