--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "companies = get_company_df_from_total_capital(companies, 0.6)\n",
+    "price_df = prices\n",
+    "start_date = '2017-6'\n",
+    "strategy_date = get_strategy_date(start_date)\n",
+    "initial_money = 100000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies = get_company_df_from_total_capital(companies, 0.6, start_date)\n",
     "fs_df = fs_df.loc[companies.index]\n",
     "fr_df = fr_df.loc[companies.index]\n",
     "iv_df = iv_df.loc[companies.index]"
@@ -109,7 +121,13 @@
     "\n",
     "def get_high_roa_porfolio(start_date):\n",
     "    firm_list = get_high_roa_firm_list(start_date, price_df, None)\n",
-    "    return firm_list"
+    "    return firm_list\n",
+    "\n",
+    "def get_qp_portfolio(start_date):\n",
+    "    start_date = str(start_date)\n",
+    "    strategy_date = get_strategy_date(start_date)\n",
+    "    qp_list = qp_formula(strategy_date)\n",
+    "    return qp_list.index"
    ]
   },
   {
@@ -118,14 +136,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "price_df = prices\n",
-    "start_date = '2016-6'\n",
-    "initial_money = 100000000\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365/2\n",
+    "total_pf_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
     "max_profit = 0.5\n",
     "max_holding_days=365/2\n",
     "total_pf_df = get_portfolio_backtest_df(get_low_per_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
     "\n",
     "# max_profit = 0.5\n",
     "# max_holding_days=365/2\n",
@@ -152,6 +172,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "my = backtest_with_code_list(my_portfolio_code_list, start_date, None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "kospi_df = prices[['KOSPI']][start_date:]\n",
     "kospi_df = kospi_df.fillna(method='bfill')\n",
     "kospi_df['total_change_rate'] = kospi_df/kospi_df.iloc[0]-1\n",
@@ -170,10 +199,8 @@
     "plt.rc('font', size=10)\n",
     "plt.figure(figsize=(20, 12))\n",
     "plt.plot(bt1.index, bt1['total_change_rate'], label='bt1')\n",
-    "# plt.plot(bt2.index, bt2['total_change_rate'], label='low per : 6 month')\n",
-    "# plt.plot(bt3.index, bt3['total_change_rate'], label='high roa : 2 years')\n",
-    "# plt.plot(bt4.index, bt4['total_change_rate'], label='high roa : 6 month')\n",
-    "# plt.plot(bt5.index, bt4['total_change_rate'], label='low per kospi')\n",
+    "plt.plot(bt2.index, bt2['total_change_rate'], label='bt2')\n",
+    "plt.plot(my.index, my['total_change_rate'], label='my portfolio')\n",
     "plt.plot(kospi_df.index, kospi_df['total_change_rate'], label='kospi', color='red',linewidth=0.5, linestyle='dashed')\n",
     "plt.plot(kosdaq_df.index, kosdaq_df['total_change_rate'], label='kosdaq', color='blue',linewidth=0.5, linestyle='dashed')\n",
     "plt.title('backtest')\n",
