--- a/neo_quant_scraping.ipynb
+++ b/neo_quant_scraping.ipynb
@@ -545,7 +545,7 @@
     "    temp_df = fs_tables[0]\n",
     "    temp_df = temp_df.set_index(temp_df.columns[0])\n",
     "    temp_df = temp_df[temp_df.columns[:4]]\n",
-    "    temp_df = temp_df.loc[['매출액', '매출원가', '영업이익', '당기순이익']]\n",
+    "    temp_df = temp_df.loc[['매출액', '매출원가', '영업이익', '당기순이익', '매출총이익']]\n",
     "\n",
     "    temp_df2 = fs_tables[2]\n",
     "    temp_df2 = temp_df2.set_index(temp_df2.columns[0])\n",
@@ -687,6 +687,16 @@
     "    sorted_roa = fr_df.sort_values(by=(index_date, 'ROA'), ascending=False)\n",
     "    return sorted_roa[index_date][:num]\n",
     "\n",
+    "def _low_pbr(invest_df, index_date, num):\n",
+    "    invest_df[(index_date, 'PBR')] = pd.to_numeric(invest_df[(index_date, 'PBR')])\n",
+    "    pbr_sorted = invest_df.sort_values(by=(index_date, 'PBR'))\n",
+    "    return pbr_sorted[index_date][:num]\n",
+    "\n",
+    "def _high_gpa(fs_df, index_date, num):\n",
+    "    gpa = fs_df[index_date]\n",
+    "    gpa['GPA'] = gpa['매출총이익']/gpa['자산']\n",
+    "    gpa_sorted = gpa.sort_values(by='GPA', ascending=False)\n",
+    "    return gpa_sorted[:num]\n",
     "\n",
     "#  [코드 4.22] 마법공식 함수로 만들기 (CH4. 전략 구현하기.ipynb)\n",
     "\n",
