add fnguide info

--- a/neo_test1.ipynb
+++ b/neo_test1.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !open ."
+    "!open ."
    ]
   },
   {
