--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -33,6 +33,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load py_neo_quant_fnguide.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%load py_neo_quant_backtest.py"
    ]
   },
@@ -42,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "companies, fs_df, fr_df, iv_df, prices = load_all_data()"
+    "companies, fs_df, fr_df, iv_df, prices = load_all_data_for_backtest()"
    ]
   },
   {
@@ -52,7 +61,7 @@
    "outputs": [],
    "source": [
     "price_df = prices\n",
-    "start_date = '2017-6'\n",
+    "start_date = '2008-6'\n",
     "strategy_date = get_strategy_date(start_date)\n",
     "initial_money = 100000000"
    ]
@@ -137,12 +146,12 @@
    "outputs": [],
    "source": [
     "max_profit = 0.5\n",
-    "max_holding_days=365/2\n",
+    "max_holding_days=365\n",
     "total_pf_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
     "max_profit = 0.5\n",
-    "max_holding_days=365/2\n",
+    "max_holding_days=365\n",
     "total_pf_df = get_portfolio_backtest_df(get_low_per_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
