--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -84,6 +84,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ebit_df = make_account_df('EV_EBIT', '재무비율')\n",
+    "ebit_df = ebit_df.loc[companies.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pd.options.display.max_rows = 60\n",
     "pd.options.display.max_columns = 20\n",
     "# pd.options.display.max_rows = 6000\n",
@@ -118,9 +128,15 @@
     "    firm_list = low_per(strategy_date).index\n",
     "    return get_code_list_has_price(firm_list, price_df, start_date)[:num]\n",
     "\n",
-    "def get_low_per_porfolio(start_date):\n",
+    "def get_low_per_portfolio(start_date):\n",
     "    firm_list = get_low_per_firm_list(start_date, price_df, None)\n",
     "    return firm_list\n",
+    "\n",
+    "def get_low_pbr_portfolio(start_date):\n",
+    "    start_date = str(start_date)\n",
+    "    strategy_date = get_strategy_date(start_date)\n",
+    "    firm_list = low_pbr(strategy_date).index\n",
+    "    return get_code_list_has_price(firm_list, price_df, start_date)\n",
     "\n",
     "def get_high_roa_firm_list(start_date, price_df, num):\n",
     "    start_date = str(start_date)\n",
@@ -128,7 +144,7 @@
     "    firm_list = high_roa(fr_df, strategy_date, None).index\n",
     "    return get_code_list_has_price(firm_list, price_df, start_date)[:num]\n",
     "\n",
-    "def get_high_roa_porfolio(start_date):\n",
+    "def get_high_roa_portfolio(start_date):\n",
     "    firm_list = get_high_roa_firm_list(start_date, price_df, None)\n",
     "    return firm_list\n",
     "\n",
@@ -136,7 +152,19 @@
     "    start_date = str(start_date)\n",
     "    strategy_date = get_strategy_date(start_date)\n",
     "    qp_list = qp_formula(strategy_date)\n",
-    "    return qp_list.index"
+    "    return qp_list.index\n",
+    "\n",
+    "def get_high_gpa_portfolio(start_date):\n",
+    "    start_date = str(start_date)\n",
+    "    strategy_date = get_strategy_date(start_date)\n",
+    "    firm_list = high_gpa(strategy_date).index\n",
+    "    return get_code_list_has_price(firm_list, price_df, start_date)\n",
+    "\n",
+    "def get_low_ev_ebit_portfolio(start_date):\n",
+    "    start_date = str(start_date)\n",
+    "    strategy_date = get_strategy_date(start_date)\n",
+    "    firm_list = low_value(ebit_df, 'EV_EBIT', strategy_date).index\n",
+    "    return get_code_list_has_price(firm_list, price_df, start_date)"
    ]
   },
   {
@@ -152,9 +180,18 @@
     "\n",
     "max_profit = 0.5\n",
     "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_low_per_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_pbr_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_ev_ebit_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365\n",
+    "total_pf_df = get_portfolio_backtest_df(get_high_gpa_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt4 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
     "# max_profit = 0.5\n",
     "# max_holding_days=365/2\n",
@@ -165,11 +202,6 @@
     "# max_holding_days=365*2\n",
     "# total_pf_df = get_portfolio_backtest_df(get_high_roa_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "# bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n",
-    "# max_profit = 0.5\n",
-    "# max_holding_days=365/2\n",
-    "# total_pf_df = get_portfolio_backtest_df(get_high_roa_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "# bt4 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
     "# total_pf_df = get_portfolio_backtest_df(get_low_per_kospi_firm_list, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "# bt5 = get_backtest_result_from_pf(total_pf_df, price_df)\n"
@@ -209,6 +241,8 @@
     "plt.figure(figsize=(20, 12))\n",
     "plt.plot(bt1.index, bt1['total_change_rate'], label='bt1')\n",
     "plt.plot(bt2.index, bt2['total_change_rate'], label='bt2')\n",
+    "plt.plot(bt3.index, bt3['total_change_rate'], label='bt3')\n",
+    "plt.plot(bt4.index, bt4['total_change_rate'], label='bt4')\n",
     "plt.plot(my.index, my['total_change_rate'], label='my portfolio')\n",
     "plt.plot(kospi_df.index, kospi_df['total_change_rate'], label='kospi', color='red',linewidth=0.5, linestyle='dashed')\n",
     "plt.plot(kosdaq_df.index, kosdaq_df['total_change_rate'], label='kosdaq', color='blue',linewidth=0.5, linestyle='dashed')\n",
