--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -151,8 +151,9 @@
     "def get_qp_portfolio(start_date):\n",
     "    start_date = str(start_date)\n",
     "    strategy_date = get_strategy_date(start_date)\n",
-    "    qp_list = qp_formula(strategy_date)\n",
-    "    return qp_list.index\n",
+    "    qp_list = qp_formula(strategy_date).index\n",
+    "    qp_list = get_code_list_has_price(qp_list, price_df, start_date)\n",
+    "    return qp_list\n",
     "\n",
     "def get_high_gpa_portfolio(start_date):\n",
     "    start_date = str(start_date)\n",
@@ -193,18 +194,16 @@
     "total_pf_df = get_portfolio_backtest_df(get_high_gpa_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "bt4 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
-    "# max_profit = 0.5\n",
-    "# max_holding_days=365/2\n",
-    "# total_pf_df = get_portfolio_backtest_df(get_low_per_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "# bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_per_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt5 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
     "# max_profit = 0.5\n",
     "# max_holding_days=365*2\n",
-    "# total_pf_df = get_portfolio_backtest_df(get_high_roa_porfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "# total_pf_df = get_portfolio_backtest_df(get_high_roa_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
     "# bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n",
-    "# total_pf_df = get_portfolio_backtest_df(get_low_per_kospi_firm_list, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "# bt5 = get_backtest_result_from_pf(total_pf_df, price_df)\n"
+    "\n"
    ]
   },
   {
@@ -213,7 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my = backtest_with_code_list(my_portfolio_code_list, start_date, None)\n"
+    "my = backtest_with_code_list(my_portfolio_code_list, start_date, None)\n",
+    "samsung = backtest_with_code_list([get_company_code('삼성전자')], start_date, None)"
    ]
   },
   {
@@ -243,7 +243,9 @@
     "plt.plot(bt2.index, bt2['total_change_rate'], label='bt2')\n",
     "plt.plot(bt3.index, bt3['total_change_rate'], label='bt3')\n",
     "plt.plot(bt4.index, bt4['total_change_rate'], label='bt4')\n",
+    "plt.plot(bt5.index, bt5['total_change_rate'], label='bt5')\n",
     "plt.plot(my.index, my['total_change_rate'], label='my portfolio')\n",
+    "plt.plot(samsung.index, samsung['total_change_rate'], label='samsung')\n",
     "plt.plot(kospi_df.index, kospi_df['total_change_rate'], label='kospi', color='red',linewidth=0.5, linestyle='dashed')\n",
     "plt.plot(kosdaq_df.index, kosdaq_df['total_change_rate'], label='kosdaq', color='blue',linewidth=0.5, linestyle='dashed')\n",
     "plt.title('backtest')\n",
