--- a/neo_strategy_prototype.ipynb
+++ b/neo_strategy_prototype.ipynb
@@ -51,6 +51,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.options.display.max_rows = 60\n",
+    "pd.options.display.max_columns = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "companies, fs_df, fr_df, iv_df, prices = load_all_data_for_backtest()"
    ]
   },
@@ -86,18 +96,6 @@
    "source": [
     "ebit_df = make_account_df('EV_EBIT', '재무비율')\n",
     "ebit_df = ebit_df.loc[companies.index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.options.display.max_rows = 60\n",
-    "pd.options.display.max_columns = 20\n",
-    "# pd.options.display.max_rows = 6000\n",
-    "# pd.set_option('display.max_columns', 500)"
    ]
   },
   {
@@ -213,7 +211,7 @@
    "outputs": [],
    "source": [
     "my = backtest_with_code_list(my_portfolio_code_list, start_date, None)\n",
-    "samsung = backtest_with_code_list([get_company_code('삼성전자')], start_date, None)"
+    "# samsung = backtest_with_code_list([get_company_code('삼성전자')], start_date, None)"
    ]
   },
   {
@@ -245,7 +243,7 @@
     "plt.plot(bt4.index, bt4['total_change_rate'], label='bt4')\n",
     "plt.plot(bt5.index, bt5['total_change_rate'], label='bt5')\n",
     "plt.plot(my.index, my['total_change_rate'], label='my portfolio')\n",
-    "plt.plot(samsung.index, samsung['total_change_rate'], label='samsung')\n",
+    "# plt.plot(samsung.index, samsung['total_change_rate'], label='samsung')\n",
     "plt.plot(kospi_df.index, kospi_df['total_change_rate'], label='kospi', color='red',linewidth=0.5, linestyle='dashed')\n",
     "plt.plot(kosdaq_df.index, kosdaq_df['total_change_rate'], label='kosdaq', color='blue',linewidth=0.5, linestyle='dashed')\n",
     "plt.title('backtest')\n",
